--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -33,3 +33,91 @@
     }
   }
 }
+
+// Menu Overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: $background-opacity;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut();
+    &.show {
+      // Slide from top
+      transform: translate3d(0, 0, 0);
+    }
+  }
+  &-branding {
+    background: $primary-color;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut();
+
+    &.show {
+      // slide from bottom
+      transform: translate3d(0, 0, 0);
+    }
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url(../imgs/profiel.jpg) center center/cover;
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
+  .nav-item {
+    transform: translate3d(600px, 0, 0);
+    @include easeOut();
+
+    &.show {
+      // slide from right
+      transform: translate3d(0, 0, 0);
+    }
+    .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 30px;
+      text-transform: uppercase;
+      padding: 0.99rem 0;
+      font-weight: 300;
+      color: #fff;
+      text-decoration: none;
+      @include easeOut();
+      &:hover {
+        color: $secondary-color;
+      }
+    }
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+}
+
+//  Delay each nav item slide 0.1s
+
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}) {
+    transition-delay: $x * 0.198s;
+  }
+}
