Text color function & about page

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -37,6 +37,15 @@
       height: 150px;
     }
   }
+  .about-info {
+    grid-template-areas:
+      "bio-img"
+      "bio"
+      "job-1"
+      "job-2"
+      "job-3";
+    grid-template-columns: 1fr;
+  }
 }
 // phone screen
 @include mediaSm {
