--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import "config";
 @import "menu";
-@import "mobile";
 
 * {
   box-sizing: border-box;
@@ -8,7 +7,7 @@
 body {
   @include background();
   background: $primary-color;
-  color: #fff;
+  color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -45,7 +44,8 @@ header {
 }
 main {
   padding: 4rem;
-  height: 100%;
+  // height: 100%;
+  min-height: calc(100vh - 60px);
   .icons {
     margin-top: 1rem;
 
@@ -64,3 +64,46 @@ main {
     }
   }
 }
+
+.about-info {
+  display: grid;
+  gap: 30px;
+  grid-template-areas:
+    "bio-img bio bio"
+    "job-1 job-2 job-3";
+  grid-template-columns: repeat(3, 1fr);
+
+  .bio-img {
+    grid-area: bio-img;
+    margin: auto;
+    border-radius: 50%;
+    border: 3px solid $secondary-color;
+  }
+
+  .bio {
+    grid-area: bio;
+    font-size: 1.5rem;
+  }
+  .job {
+    background: lighten($primary-color, 5);
+    padding: 0.5rem;
+    border-bottom: 5px solid $secondary-color;
+  }
+  .job-1 {
+    grid-area: job-1;
+  }
+  .job-2 {
+    grid-area: job-2;
+  }
+  .job-3 {
+    grid-area: job-3;
+  }
+}
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+}
+
+@import "mobile";
