--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,11 @@ main {
       }
     }
   }
+  &#about {
+    h1 {
+      margin-top: 5vh;
+    }
+  }
   &#home {
     overflow: hidden;
     h1 {
@@ -99,6 +104,44 @@ main {
     grid-area: job-3;
   }
 }
+// Work/ Projects
+.projects {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.7rem;
+  img.pro-img {
+    width: 100%;
+    border: 3px #fff solid;
+
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeOut();
+    }
+  }
+}
+
+// Button- styles
+.btn {
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
+
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+.btn-dark {
+  @extend .btn;
+  background: darken($primary-color, 50);
+}
+.btn-light {
+  @extend .btn;
+  background: lighten($primary-color, 50);
+}
+
 #main-footer {
   text-align: center;
   padding: 1rem;
