--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color: #eece1f;
 $show-home-image: true;
-$home-image: url(../imgs/showcase.jpg);
+$home-image: url(../imgs/showcase_thumbnail.jpg);
 $background-opacity: 0.9;
 
 @mixin easeOut {
