changed the profile pic

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -81,7 +81,7 @@
     .portrait {
       width: 550px;
       height: 250px;
-      background: url(../imgs/profiel.jpg) center center/cover;
+      background: url(../imgs/card1_thumbnail.jpg) center center/cover;
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
