problems with autoprefix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -73,6 +73,7 @@ main {
 .about-info {
   display: grid;
   gap: 30px;
+
   // grid-template-areas: "bio-img bio bio
   // job-1 job-2 job-3";
 
@@ -86,7 +87,7 @@ main {
   }
 
   .bio {
-    grid-area: bio;
+    // grid-area: bio;
     font-size: 1.5rem;
   }
   .job {
@@ -95,13 +96,13 @@ main {
     border-bottom: 5px solid $secondary-color;
   }
   .job-1 {
-    grid-area: job-1;
+    // grid-area: job-1;
   }
   .job-2 {
-    grid-area: job-2;
+    // grid-area: job-2;
   }
   .job-3 {
-    grid-area: job-3;
+    // grid-area: job-3;
   }
 }
 // Work/ Projects
